# au-service

./: .gitignore  .rustfmt.toml  Cargo.toml  README.md
src/: main.rs
src/api/: mod.rs
src/api/axum_extractors/: token.rs
src/api/controllers/: authentication.rs  base.rs  mod.rs  session.rs  user.rs
src/api/utils/: into_response.rs  mod.rs  request.rs
src/core_utils/: configs.rs  errors.rs  mod.rs  surreal_id.rs
src/db/: base.rs  issuer.rs  mod.rs  session.rs  token.rs  user.rs
src/entities/: base.rs  issuer.rs  mod.rs  session.rs  token.rs  user.rs
src/services/: base.rs  create_issuer.rs  create_session.rs  create_user.rs  generate_access_token.rs  generate_token.rs  mod.rs  register.rs
tests/: try_api.rs
