[package]
name = "au-service"
version = "0.1.0"
edition = "2021"

[dependencies]
tokio = {version = "1.3.2", features = ["full"]}
axum = "0.6.20"
serde = { version = "1.0.118", features = ["derive"]}
serde_json = "1.0.107"
tower-http = { version = "0.4", features = ["fs"] }
thiserror = "1.0.48"
surrealdb = "1.0.0"
async-trait = "0.1.73"
log = "0.4.20"
pretty_env_logger = "0.5.0"
chrono = "0.4.31"

[dev-dependencies]
anyhow = "1"
httpc-test = "0.1.1"
clippy = "0.0.302"
